# lox

./: .gitignore  LICENSE
script/: .editorconfig  .project
script/doc/: 5representing-code.md
script/sample/: p01.lox
script/src/com/xiongxin/: Lox.java  Scanner.java  Token.java  TokenType.java
script/src/com/xiongxin/lox/: Lox.java  Scanner.java  Token.java  TokenType.java
script/src/com/xiongxin/tool/: GenerateAst.java
vm/: CMakeLists.txt  build.zig
vm/example/: p01.lox  p02.lox  p03.lox  p04.lox
vm/include/: chunk.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
vm/src/: chunk.c  chunk.zig  common.zig  compiler.c  compiler.zig  debug.c  main.c  main.zig  memory.c  object.c  parser.zig  scanner.c  scanner.zig  table.c  value.c  value.zig  vm.c  vm.zig
zvm/: .gitignore  build.zig  fib.zig
zvm/sample/: p01.lox  p02.lox  p03.lox  p04.lox  p05.lox  p06.lox  p07.lox  p09.lox
zvm/src/: chunk.zig  compiler.zig  gc.zig  heap.zig  main.zig  parser.zig  scanner.zig  value.zig  vm.zig
